# international-trade-agent

./: README.md  client.py  env.example  main.py  pyproject.toml  translator_server.py
contract/: excel_server.py  main.py  test.py
contract/output/: converted_20250424_005352.xlsx
contract/template/: template.xlsx
data/: tmp.xlsx
data/input/: bom.xlsx
data/output/: translated_bom.xlsx
excel/: excel_server.py
graphrag/: index.sh  rag_server.py  settings.yaml
graphrag/cache/community_reporting/: chat_create_community_report_04e6294e0d3b50f585a8e6576e53ab247f7482ca6207aa8b1d623448f8aa0411_v2  chat_create_community_report_900f5d7d0922de9ff771ca0df7ebc886540c4b2028c013ac52fa33ea932f0165_v2
graphrag/cache/extract_graph/: chat_extract-continuation-0_c2fcf9bf49de260666924ff6eeac42647338a6ea9c217960e05b6e9bb814b867_v2
graphrag/output/: relationships.parquet
rag/: env.example  rag_server.py
rag/cache/community_reporting/: chat_create_community_report_7097477a540bf2d900e230d999e3b1b160188db108574fb0e75a6907e59924dd_v2  chat_create_community_report_f0cff58606b7f4b5162415ffdd93a55fb5d15ce5d2d0ec4eeb9b492dda53add7_v2
rag/cache/extract_graph/: chat_0fa280f69e98cc0cea253a60011e96f2acb3a69d6a8acaa13366996abbd057bd_v2  chat_b9cb12757b3fa49b945a91272a50528c1f967676070e0a2fdb484bd5d8c689f2_v2  (+5 more)
rag/input/: process.txt
rag/logs/: logs.json
rag/output/: communities.parquet  community_reports.parquet  documents.parquet  entities.parquet  stats.json  text_units.parquet
translator/: translator_server copy.py  translator_server.py
(+24 files in other folders)
