[project]
name = "international-trade-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "googletrans>=4.0.2",
    "graphrag>=2.1.0",
    "mcp>=1.6.0",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "pathlib>=1.0.1",
]
